@@ -26,7 +26,6 @@
 
       <component class="lic">
         <release tarname="gcc-4.5.2-1-mingw32-lic.tar.lzma" />
-        <release tarname="gcc-4.6.1-1-mingw32-lic.tar.lzma" />
         <release tarname="gcc-4.6.1-2-mingw32-lic.tar.lzma" />
       </component>
 
@@ -39,17 +38,6 @@
           <requires eq="libssp-%-mingw32-dll-0.tar" />
           <requires eq="libmpc-*-mingw32-dll-2.tar" />
           <requires eq="libgomp-%-mingw32-dll-1.tar" />
-          <requires eq="pthreads-w32-*-mingw32-dev.tar" />
-        </release>
-        <release tarname="gcc-core-4.6.1-1-mingw32-bin.tar.lzma">
-          <requires eq="binutils-*-mingw32-bin.tar" />
-          <requires eq="mingwrt-*-mingw32-dev.tar" />
-          <requires eq="w32api-*-mingw32-dev.tar" />
-          <requires eq="libgcc-%-mingw32-dll-1.tar" />
-          <requires eq="libssp-%-mingw32-dll-0.tar" />
-          <requires eq="libmpc-*-mingw32-dll-2.tar" />
-          <requires eq="libgomp-%-mingw32-dll-1.tar" />
-          <requires eq="libquadmath-%-mingw32-dll-0.tar" />
           <requires eq="pthreads-w32-*-mingw32-dev.tar" />
         </release>
         <release tarname="gcc-core-4.6.1-2-mingw32-bin.tar.lzma">
@@ -67,13 +55,11 @@
 
       <component class="doc">
         <release tarname="gcc-4.5.2-1-mingw32-doc.tar.lzma" />
-        <release tarname="gcc-4.6.1-1-mingw32-doc.tar.lzma" />
         <release tarname="gcc-4.6.1-2-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lang">
         <release tarname="gcc-4.5.2-1-mingw32-lang.tar.lzma" />
-        <release tarname="gcc-4.6.1-1-mingw32-lang.tar.lzma" />
         <release tarname="gcc-4.6.1-2-mingw32-lang.tar.lzma" />
       </component>
     </package>
@@ -102,7 +88,6 @@
 
       <component class="dll">
         <release tarname="libgcc-4.5.2-1-mingw32-dll-1.tar.lzma" />
-        <release tarname="libgcc-4.6.1-1-mingw32-dll-1.tar.lzma" />
         <release tarname="libgcc-4.6.1-2-mingw32-dll-1.tar.lzma" />
       </component>
     </package>
@@ -177,7 +162,6 @@
         <requires eq="gcc-core-%-mingw32-bin.tar" />
         <requires eq="libstdc++-%-mingw32-dll-6.tar" />
         <release tarname="gcc-c++-4.5.2-1-mingw32-bin.tar.lzma" />
-        <release tarname="gcc-c++-4.6.1-1-mingw32-bin.tar.lzma" />
         <release tarname="gcc-c++-4.6.1-2-mingw32-bin.tar.lzma" />
       </component>
     </package>
@@ -203,7 +187,6 @@
 
       <component class="dll">
         <release tarname="libstdc++-4.5.2-1-mingw32-dll-6.tar.lzma" />
-        <release tarname="libstdc++-4.6.1-1-mingw32-dll-6.tar.lzma" />
         <release tarname="libstdc++-4.6.1-2-mingw32-dll-6.tar.lzma" />
       </component>
     </package>
@@ -229,7 +212,6 @@
         <requires eq="gcc-core-%-mingw32-bin.tar" />
         <requires eq="libgfortran-%-mingw32-dll-3.tar" />
         <release tarname="gcc-fortran-4.5.2-1-mingw32-bin.tar.lzma" />
-        <release tarname="gcc-fortran-4.6.1-1-mingw32-bin.tar.lzma" />
         <release tarname="gcc-fortran-4.6.1-2-mingw32-bin.tar.lzma" />
       </component>
     </package>
@@ -255,7 +237,6 @@
 
       <component class="dll">
         <release tarname="libgfortran-4.5.2-1-mingw32-dll-3.tar.lzma" />
-        <release tarname="libgfortran-4.6.1-1-mingw32-dll-3.tar.lzma" />
         <release tarname="libgfortran-4.6.1-2-mingw32-dll-3.tar.lzma" />
       </component>
     </package>
@@ -306,9 +287,6 @@
         <release tarname="gcc-objc-4.5.2-1-mingw32-bin.tar.lzma">
           <requires eq="libobjc-%-mingw32-dll-2.tar" />
         </release>
-        <release tarname="gcc-objc-4.6.1-1-mingw32-bin.tar.lzma">
-          <requires eq="libobjc-%-mingw32-dll-3.tar" />
-        </release>
         <release tarname="gcc-objc-4.6.1-2-mingw32-bin.tar.lzma">
           <requires eq="libobjc-%-mingw32-dll-3.tar" />
         </release>
@@ -336,7 +314,6 @@
 
       <component class="dll">
         <release tarname="libobjc-4.5.2-1-mingw32-dll-2.tar.lzma" />
-        <release tarname="libobjc-4.6.1-1-mingw32-dll-3.tar.lzma" />
         <release tarname="libobjc-4.6.1-2-mingw32-dll-3.tar.lzma" />
       </component>
     </package>
@@ -350,7 +327,6 @@
       <component class="dll">
         <requires eq="libpthread-*-mingw32-dll-2.tar" />
         <release tarname="libgomp-4.5.2-1-mingw32-dll-1.tar.lzma" />
-        <release tarname="libgomp-4.6.1-1-mingw32-dll-1.tar.lzma" />
         <release tarname="libgomp-4.6.1-2-mingw32-dll-1.tar.lzma" />
       </component>
     </package>
@@ -363,7 +339,6 @@
 
       <component class="dll">
         <release tarname="libssp-4.5.2-1-mingw32-dll-0.tar.lzma" />
-        <release tarname="libssp-4.6.1-1-mingw32-dll-0.tar.lzma" />
         <release tarname="libssp-4.6.1-2-mingw32-dll-0.tar.lzma" />
       </component>
     </package>
@@ -375,7 +350,6 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
-        <release tarname="libquadmath-4.6.1-1-mingw32-dll-0.tar.lzma" />
         <release tarname="libquadmath-4.6.1-2-mingw32-dll-0.tar.lzma" />
       </component>
     </package>
